# Syft_rust_demo

./: .env  Cargo.toml  README.md  authors.csv  diesel.toml  final_output.json  grype_final.csv  grype_final.json  output.json  results.csv  run_syft.sh  sbom.json  syft.json  syft_final.json
db/: init_db.sql  packages.db
migrations/2024-07-15-141902_create_inital_schema/: down.sql  up.sql
sample/: 0031.syft.json  0031_syfts.json  0031_valner.json  blacklist_blackduck.csv  bomfile.csv  sbom_2024-04-29_074207.cdx.cleaned.json  sbom_2024-04-29_074207.cdx.json  valner_count.txt
src/: database.rs  main.rs  reader.rs  syfter.rs
src/author/: mod.rs  namer.rs
src/cyclonedx_exporter/: exporter.rs
src/database/: action.rs  init.rs  mod.rs  reader.rs
src/diesel/: init.rs
src/merger/: json_merge.rs
src/reader/: bd_reader.rs  mod.rs  readf.rs  sy_reader.rs
src/syfter/: scan.rs
