[package]
name = "Syft_rust_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
csv = "1.3.0"
diesel = { version = "2.2.1", features = ["sqlite"] }
dotenvy = "0.15.7"
polars = { version = "0.41.2", features = ["lazy", "serde"] }
regex = "1.10.5"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.38.0", features = ["full"] }
walkdir = "2.5.0"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "init_db"
path = "src/database/init.rs"

[[bin]]
name = "json_df"
path = "src/reader/readf.rs"

[[bin]]
name = "namer"
path = "src/author/namer.rs"

[[bin]]
name = "diesel"
path = "src/diesel/init.rs"
